# 2dpme

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  plot_solution.m  variables.data
src/: CMakeLists.txt  constants.f90  library.f90  linear_solvers.f90  main.f90  precision.f90  quadrature.f90  special_functions.f90
